[#3774] Fix dark mode compatibility

--- a/src/openforms/scss/components/builder/_builder.scss
+++ b/src/openforms/scss/components/builder/_builder.scss
@@ -195,6 +195,16 @@ div.flatpickr-calendar.open {
     border-color: var(--body-quiet-color);
     color: var(--body-fg);
   }
+
+  &:read-only {
+    background-color: var(--form-input-bg);
+    border-color: var(--border-color);
+    color: var(--body-fg);
+  }
+}
+
+.table {
+  color: var(--body-fg);
 }
 
 .card {
